--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,47 @@ body{
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  font-family: 'Noto Sans', sans-serif;;
 }
+
 h1{
 	color: white;
+	font-size: 50px;
+	font-weight: normal;
+	margin-bottom: 0;
 }
+
+h2{
+	color: white;
+	font-size: 22px;
+	margin-top: 0;
+}
+
+.bio{
+	color: white;
+	font-size: 14px;
+}
+
+.img{
+	height: 150px;
+	border-radius: 100%;
+	border: 3px solid white;
+	margin-top: 35px;
+}
+
+.about{
+	width: 400px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
+.horizontal{
+	height: 3px;
+	background-color: white;
+	border: none;
+	width: 80px;
+}
+
+
 
