--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 body{
-  background: url(../images/lights.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-family: 'Noto Sans', sans-serif;;
+  font-family: 'Noto Sans', sans-serif;
+  margin: 0;
 }
 
 h1{
@@ -39,12 +39,121 @@ h2{
 	text-align: center;
 }
 
-.horizontal{
+.horizontal-first{
 	height: 3px;
 	background-color: white;
 	border: none;
 	width: 80px;
 }
 
+.about-container{
+	background: url(../images/lights.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+	height: 600px; 
+}
+
+h3{
+	text-align: center;
+	font-size: 28px;
+	font-weight: normal;
+	margin-top: 100px;
+}
+
+.horizontal-second{
+	border-top: 6px double #022E3D;
+	width: 250px;
+	border-bottom: none;
+	border-right: none;
+}
+
+.box{
+	float: left;
+	/*background-color: #48C0E8;*/
+	width: 42.5%;
+	margin-left: 5%;
+	margin-top: 80px;
+}
+
+.clear{
+	clear: both;
+}
+
+h4{
+	text-align: center;
+	font-size: 24px;
+}
+
+p{
+	text-align: center;
+}
+
+.full-width{
+	width: 100%
+}
+
+.skill-tool{
+	width: 400px;
+	margin-left: auto;
+	margin-right: auto;
+	margin: 35px auto;
+}
+
+.icons{
+	text-align: center;
+}
+
+.icon{
+	margin: 30px 0;
+}
+
+.contact-me{
+	height: 350px;
+	background-color: #202020;
+	padding-top: 30px;
+}
+
+.contact-headline{
+	text-align: center;
+}
+
+.contact-info{
+	color: white;
+	font-size: 13px;
+	margin-top: 30px;
+}
+
+.contact-link{
+	color: white;
+	font-weight: bold;
+	font-size: 13px;
+}
+
+.nav-link{
+	color: white;
+	text-decoration: none;
+}
 
 
+li{
+	display: inline-block;
+	font-size: 13px;
+	width: 100px;
+	font-weight: bold;
+	margin-top: 30px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	text-align: center;
+	margin-left: 20px;
+}
+ul{
+	margin-left: 20%;
+}
+
+.hire-me{
+	border-style: solid;
+	border-color: white;
+
+}
