--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ h3{
 }
 
 .horizontal-second{
-	border-top: 6px double #022E3D;
-	width: 250px;
+	border-top: 6px double white;
+	width: 200px;
 	border-bottom: none;
 	border-right: none;
 }
@@ -157,3 +157,26 @@ ul{
 	border-color: white;
 
 }
+.contact-container {
+  background: #eee;
+  box-shadow: 0px 2px 2px #009627;
+  float: left;
+  margin-bottom: 62px;
+  width: 100%;
+  height: 500px;
+}
+.contact-header {
+  font-family: 'Work Sans', sans-serif;
+  padding: 0 100px 50px 100px;
+  margin-top: 150px;
+  text-align: center;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+/*.social-container {
+  margin: 0 auto;
+  height: auto;
+  max-width: 600px;
+  background-color: blue;
+} */
+
