--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ h3{
 }
 
 .horizontal-second{
-	border-top: 6px double white;
+	border-top: 6px double;
 	width: 200px;
 	border-bottom: none;
 	border-right: none;
@@ -74,7 +74,7 @@ h3{
 	/*background-color: #48C0E8;*/
 	width: 42.5%;
 	margin-left: 5%;
-	margin-top: 80px;
+	margin-top: 60px;
 }
 
 .clear{
@@ -136,7 +136,6 @@ p{
 	text-decoration: none;
 }
 
-
 li{
 	display: inline-block;
 	font-size: 13px;
@@ -172,6 +171,55 @@ ul{
   text-align: center;
   font-weight: 400;
   text-transform: uppercase;
+}
+
+.genians{
+	margin-top: 80px;
+	position: relative;
+	width: 100%;
+
+}
+.geni-img{
+	opacity: 0.5;
+	filter: alpha(opacity=50); /* For IE8 and earlier */
+	 /*transition: transform 2s; imp*/
+}
+.geni-img:hover{
+	/*transform: scale(1.3); imp*/
+
+}
+img:hover{
+	opacity: 1.0;
+	filter: alpha(opacity=50); /* For IE8 and earlier */
+}
+.genians-inner{
+	float: left;
+	position: absolute;
+	top: 0;
+	text-align: center;
+	background-color: #45BDE6;
+	width: 800px;
+	height: 250px;
+	margin-top: 200px;
+	margin-left: 240px;
+	border-radius: 3px;
+    font-family: 'Arimo', sans-serif;
+    outline-style: dashed;
+    outline-color:#45BDE6;
+}
+.genians-view{
+	text-decoration: none;
+	color: white;
+	border-bottom:5px solid transparent;
+	padding-bottom: 5px;
+	transition:border-bottom 2s;
+}
+
+.genians-view a,a:active,a:hover {
+  border-bottom:5px solid green;
+  text-transform: uppercase;
+
+
 }
 /*.social-container {
   margin: 0 auto;
