button hover added

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ img:hover{
 }
 
 .genians-view a,a:active,a:hover {
-  border-bottom:5px solid green;
+  border-bottom:3px solid white;
   text-transform: uppercase;
 
 
