--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
   margin: 0;
 }
 
-h1{
+.name{
 	color: white;
 	font-size: 50px;
 	font-weight: normal;
@@ -113,6 +113,7 @@ p{
 	height: 350px;
 	background-color: #202020;
 	padding-top: 30px;
+	color: white;
 }
 
 .contact-headline{
@@ -134,6 +135,8 @@ p{
 .nav-link{
 	color: white;
 	text-decoration: none;
+	border-bottom:5px solid transparent;
+	transition:border-bottom 2s;
 }
 
 li{
@@ -151,11 +154,11 @@ ul{
 	margin-left: 20%;
 }
 
-.hire-me{
+/*.hire-me{
 	border-style: solid;
 	border-color: white;
 
-}
+}*/
 .contact-container {
   background: #eee;
   box-shadow: 0px 2px 2px #009627;
@@ -215,7 +218,7 @@ img:hover{
 	transition:border-bottom 2s;
 }
 
-.genians-view a,a:active,a:hover {
+.genians-view .nav-link a,a:active,a:hover {
   border-bottom:3px solid white;
   text-transform: uppercase;
 
