--- a/junu-github.css
+++ b/junu-github.css
@@ -2,7 +2,7 @@
         margin: 0;
         padding: 0;
         border: 0;
-        outline: 0;
+        /*outline: 0;*/
         /*font-size: 100%;*/
         vertical-align: baseline;
         background: transparent;
@@ -128,7 +128,20 @@ p{
 	width: 100%
 }
 
+.skill-tool{
+	width: 400px;
+	margin-left: auto;
+	margin-right: auto;
+	margin: 35px auto;
+}
 
+.icons{
+	text-align: center;
+}
+
+.icon{
+	margin: 30px 0;
+}
 
 
 .genians{
@@ -140,4 +153,106 @@ p{
 	opacity: 0.5;
 	filter: alpha(opacity=50); /* For IE8 and earlier */
 	 /*transition: transform 2s; imp*/
+}
+.geni-img:hover{
+	/*transform: scale(1.3); imp*/
+
+}
+img:hover{
+	opacity: 1.0;
+	filter: alpha(opacity=50); /* For IE8 and earlier */
+}
+.genians-inner{
+	float: left;
+	position: absolute;
+	top: 0;
+	text-align: center;
+	background-color: #45BDE6;
+	padding: 100px;
+	margin-top: 8rem;
+	margin-left: 20rem;
+	border-radius: 3px;
+    font-family: 'Arimo', sans-serif;
+    outline-style: dashed;
+    outline-color:#45BDE6;
+}
+.genians-view{
+	text-decoration: none;
+	color: white;
+	border-bottom:5px solid transparent;
+	padding-bottom: 5px;
+	transition:border-bottom 2s;
+}
+
+.genians-view #menu:active,#menu:hover {
+  border-bottom:3px solid white;
+  text-transform: uppercase;
+}
+
+.contact-me{
+	/*height: 350px;*/
+	background-color: #085C78;
+	padding-top: 30px;
+	color: white;
+}
+
+.contact-headline{
+	text-align: center;
+	font-size: 40px;
+}
+
+.contact-info{
+	color: white;
+	font-size: 13px;
+	margin-top: 30px;
+}
+
+.contact-link{
+	color: white;
+	
+}
+
+
+
+/*.hire-me{
+	border-style: solid;
+	border-color: white;
+
+}*/
+.contact-container {
+  background: #eee;
+  box-shadow: 0px 2px 2px #009627;
+  float: left;
+  margin-bottom: 62px;
+  width: 100%;
+  /*height: 500px;*/
+}
+.contact-header {
+  font-family: 'Work Sans', sans-serif;
+  padding: 0 100px 50px 100px;
+  margin-top: 150px;
+  text-align: center;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.social-container {
+  text-align: center;
+  margin-bottom: 30px; 
+} 
+#social-icon:hover{
+	opacity: 0.3;
+}
+
+.social-container .contact-link{
+	margin-left: 10px;
+}
+
+.copyright{
+	background: #023A4D;
+	padding:30px;
+	text-align:center;
+	font-size: 15px;
+	
+
 }
