--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
         margin: 0;
         padding: 0;
         border: 0;
-        outline: 0;
+        /*outline: 0;*/
         /*font-size: 100%;*/
         vertical-align: baseline;
         background: transparent;
@@ -128,7 +128,20 @@ p{
 	width: 100%
 }
 
+.skill-tool{
+	width: 400px;
+	margin-left: auto;
+	margin-right: auto;
+	margin: 35px auto;
+}
 
+.icons{
+	text-align: center;
+}
+
+.icon{
+	margin: 30px 0;
+}
 
 
 .genians{
@@ -176,7 +189,28 @@ img:hover{
   text-transform: uppercase;
 }
 
+.contact-me{
+	/*height: 350px;*/
+	background-color: #085C78;
+	padding-top: 30px;
+	color: white;
+}
 
+.contact-headline{
+	text-align: center;
+	font-size: 40px;
+}
+
+.contact-info{
+	color: white;
+	font-size: 13px;
+	margin-top: 30px;
+}
+
+.contact-link{
+	color: white;
+	
+}
 
 
 
@@ -206,4 +240,19 @@ img:hover{
   text-align: center;
   margin-bottom: 30px; 
 } 
+#social-icon:hover{
+	opacity: 0.3;
+}
 
+.social-container .contact-link{
+	margin-left: 10px;
+}
+
+.copyright{
+	background: #023A4D;
+	padding:30px;
+	text-align:center;
+	font-size: 15px;
+	
+
+}
